#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package pdscalibdata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-05-02
2014-01-30 Mikhail Dubrovin
- in /GlobalMethods.h to get rid of compilation errors in RHEL6 
	include <typeinfo>  // for typeid 
	include <stdint.h>  // for uint8_t, uint16_t etc.
	
Tag: V00-05-01
2014-01-29 Mikhail Dubrovin
- add new calibration types for pnCCD:
	PnccdBaseV1
	PnccdPixelGainV1
	PnccdPedestalsV1
	PnccdPixelStatusV1
	PnccdCommonModeV1
	GlobalMethods
	
Tag: V00-05-00
2013-09-24 Andy Salnikov
- pdsdata is now DDL-based, with a lot of changes to interface
- modify all dependencies in this package
- should we use definitions from psddl_psana instead?

Tag: V00-04-06
2013-05-02 Andy
- add missing include in couple of files

Tag: V00-04-05
2013-04-03 Mikhail Dubrovin
- add new calibraion data classes: CsPadCenterGlobalV1 and CsPadRotationGlobalV1
	
Tag: V00-04-04
2013-03-09 Mikhail Dubrovin
- in CsPad2x2CenterV1 and CsPad2x2TiltV1 improve print()

Tag: V00-04-03
2013-03-08 Mikhail Dubrovin
- add new calibraion data classes: CsPad2x2CenterV1 and CsPad2x2TiltV1

Tag: V00-04-02
2013-03-02 Andy Salnikov
- add missing includes to CsPadBeamVectorV1 and CsPadBeamIntersectV1

Tag: V00-04-01
2013-03-01 Mikhail Dubrovin
- add new calibraion data classes CsPadBeamVectorV1 and CsPadBeamIntersectV1;
  in all CalibPars*.cpp add default parameters in default constructor
	
Tag: V00-04-00
2013-01-30 Andy Salnikov
- switching to const ndarrays for array data

Tag: V00-03-08
2013-01-28 Andy Salnikov
- updates related to changes in ndarray constness

Tag: V00-03-07
2012-11-08 Andy Salnikov
- for cspad calibrations which read per-pixel data from files improve