@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-03
+2014-02-01 Christopher O'Grady
+- put in cspad common-mode defaults of "1 50 10" in case common mode file doesn't exist
+	
 Tag: V00-05-02
 2014-01-30 Mikhail Dubrovin
 - in /GlobalMethods.h to get rid of compilation errors in RHEL6 
